# Projet1StageCrewAiLang

./: README.md
agentic_crew/: .gitignore  README.md  pyproject.toml
agentic_crew/src/agentic_crew/: crew.py  llm.py  main.py
agentic_crew/src/agentic_crew/agents/: analyst.py  decision.py  direct.py  orchestrator.py  rag.py  report.py  research.py
agentic_crew/src/agentic_crew/config/: agents.yaml  tasks.yaml
agentic_crew/src/agentic_crew/output/: final_report.md
agentic_crew/src/agentic_crew/rag/: ingest.py  retriever.py
agentic_crew/src/agentic_crew/rag/rag/vector_db/: chroma.sqlite3
agentic_crew/src/agentic_crew/tools/: __init__.py  rag_tool.py  web_search_tool.py
agentic_crew/src/output/: final_report.md
